03_code2/grade.txt
Grading at Thu Jul  9 01:14:28 UTC 2020
Checking code2.c for legal syntax
temp.c: In function ‘printTriangle’:
temp.c:20:5: error: expected ‘;’ before ‘}’ token
     }
     ^
The code did not have legal syntax!

Overall Grade: F
